--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-create-bridge": "^2.0.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "thunk": "0.0.1"
   },
   "devDependencies": {
