--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "eslint": "^5.0.1",
     "eslint-config-rallycoding": "^3.2.0",
+    "lodash": "^4.17.10",
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-create-bridge": "^2.0.1",
