--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,10 +137,12 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "com.android.support:appcompat-v7:23.4.0"
-    implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:23.4.0'
+    implementation 'com.facebook.react:react-native:+'
+    // From node_modules
     implementation 'com.google.code.gson:gson:2.8.0'
+    implementation files('src/main/java/com/fetchmusicfiles/Utilities/MyID3_for_Android.jar')
 }
 
 // Run this once to be able to run the application with BUCK
