--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-create-bridge": "^2.0.1",
-    "react-native-super-grid": "^2.4.1",
     "react-native-recyclerview-list": "^0.3.2",
+    "react-native-router-flux": "^4.0.0-beta.31",
+    "react-native-super-grid": "^2.4.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
