--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-recyclerview-list": "^0.3.2",
     "react-native-router-flux": "^4.0.0-beta.31",
     "react-native-super-grid": "^2.4.1",
+    "react-native-track-player": "^0.2.4",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
