Styled library items, list item menu and modals

--- a/ios/fetchMusicFiles/Info.plist
+++ b/ios/fetchMusicFiles/Info.plist
@@ -56,6 +56,7 @@
 		<string>Montserrat-Bold.ttf</string>
 		<string>Montserrat-Regular.ttf</string>
 		<string>Montserrat-SemiBold.ttf</string>
+		<string>Montserrat-Medium.ttf</string>
 	</array>
 </dict>
 </plist>
