--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-track-player": "^0.2.4",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "thunk": "0.0.1"
   },
