--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-create-bridge": "^2.0.1",
     "react-native-recyclerview-list": "^0.3.2",
     "react-native-router-flux": "^4.0.0-beta.31",
+    "react-native-spinkit": "^1.1.1",
     "react-native-super-grid": "^2.4.1",
     "react-native-track-player": "^0.2.4",
     "react-redux": "^5.0.7",
