--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-create-bridge": "^2.0.1",
+    "react-native-marquee": "^0.3.2",
     "react-native-recyclerview-list": "^0.3.2",
+    "react-native-rename": "^2.2.2",
     "react-native-router-flux": "^4.0.0-beta.31",
     "react-native-super-grid": "^2.4.1",
     "react-native-track-player": "^0.2.4",
