Changes done for building prod app

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -15,8 +15,9 @@ buildscript {
 
 allprojects {
     repositories {
-				// Add jitpack repository (added by react-native-spinkit)
-				maven { url "https://jitpack.io" }
+        google()		
+        // Add jitpack repository (added by react-native-spinkit)
+		maven { url "https://jitpack.io" }
         mavenLocal()
         jcenter()
         maven {
